Recomplied paper.md and ran make to include new conclusion paragraphs

--- a/paper.html
+++ b/paper.html
@@ -1,7 +1,10 @@
 <h1 id="stat-159-project-1">Stat 159 Project 1</h1>
 <p><em>Abigail Chaver</em></p>
 <p>September 30, 2016</p>
-<p><img style="width:304px; margin:auto;"> <img src="images/stat159-logo.png" /> </img></p>
+<div class="figure">
+<img src="images/stat159-logo.png" />
+
+</div>
 <h2 id="abstract">Abstract</h2>
 <p>In this paper, we consider industry standard tools for replicating reports. We discuss version control systems and collaboration services, formatting software, and replication tools. The purpose of this report is to address benefits and challenges of these tools, and consider their use in the wider context of computational research.</p>
 <hr />
@@ -42,3 +45,5 @@
 <hr />
 <h2 id="conclusion">Conclusion</h2>
 <p>The tools discussed in this paper are widely used, largely due to the fact that they are free. A huge advantage of using popular tools like these is that there is a huge body of documentation, both official and not. The publishers of the tool provide very useful materials for learning, but there is a plethora of tutorials, videos, and blogs published by individuals that new users can learn from. Websites like StackOverflow also allow users to find examples of solutions to problems similar to theirs, and ask new questions of experts. It's quite remarkable how much valuable learning material is accessible for free over the internet.</p>
+<p>Overall, these tools were quite easy to pick up. The majority of the time working on this project was spent on writing content, not on putting pieces of the report together. Probably the most challenging tool to use for this projects and in past projects is git - it's really necessary to understand the mental model of how files are committed and reverted, and the commands are not always intuitive. However, Git and Github are probably the most powerful tools of the set, and it's because of this model of version control that it can do so much. It's an extremely valuable skill to learn.</p>
+<p>I was able to complete the work without any hands-on help, but I used plenty of tutorials and resources I found online. Whenever I got stuck on a small bug, I was able to google my problem and find a quick solution. The entire project took about 3 hours; it felt pretty manageable. It was really helpful to get practice with Git and Github, and to construct a makefile. This project was a helpful excercise in getting familiar with these tools.</p>
