moved paper.md and paper.html into paper folder

--- a/paper/paper.html
+++ b/paper/paper.html
@@ -2,7 +2,7 @@
 <p><em>Abigail Chaver</em></p>
 <p>September 30, 2016</p>
 <div class="figure">
-<img src="images/stat159-logo.png" />
+<img src="../images/stat159-logo.png" />
 
 </div>
 <h2 id="abstract">Abstract</h2>
@@ -16,7 +16,7 @@
 <p>Makefiles also represent the linear structure of report creation by executing commands in order of dependency, so that, for example, a file will never be formatted in pandoc before its plots have been generated. In this way, the makefile provides a summary of the project, structured from the most granular pieces of content to the highest level compilation.</p>
 <h3 id="git">Git</h3>
 <div class="figure">
-<img src="images/git-logo.png" />
+<img src="../images/git-logo.png" />
 
 </div>
 <p>Git is a version control system which allows us to efficiently save versions of files as they are edited so that we can return to previous versions with ease. Git does this by tracking changes between iterations, rather than saving full versions of the file at each stage. At any point in time, Git can reconstruct previous versions of a file by reversing the actions of the previous commits.</p>
@@ -25,20 +25,20 @@
 <p>Git also uses the analogy of a tree to facilitate non-linear iteration. By creating a new branch of a project, multiple authors can work separately on parts of the project without worrying about each others changes until they merge their branch into the master version. This makes Git invaluable for large projects with many collaborators.</p>
 <h3 id="github">Github</h3>
 <div class="figure">
-<img src="images/github-logo.png" />
+<img src="../images/github-logo.png" />
 
 </div>
 <p>Github is a service that allows users to store repositories on a remote server over the internet. This is incredibly powerful, because it allows people on different networks to collaborate on the same project, accessing the same up-to-date repositories through the internet. Github is company that provides this service to companies and individuals, and is used ubiquitously in software development. Github can be used through the command line, like Git, but also provides a GUI on their website and through a desktop app that allows users to commit and pull withouot using terminal.</p>
 <h3 id="markdown">Markdown</h3>
 <div class="figure">
-<img src="images/markdown-logo.png" />
+<img src="../images/markdown-logo.png" />
 
 </div>
 <p>Markdown is a super low-barrier language for formatting text. Compared to other markup languages like HTML, which allow users to format content but also create complicated nesting structures, include scripts, and complicated styling, Markdown is extremeley simple. It is much more like a simple word processor - in fact, it contains even less functionality than Microsoft Word. Many websites use markdown as the underlying format for comments, posts, or emails, because it provides a bit of formatting without going overboard on functionality. Markdown allows users to do simple word formatting like bold and italic, create lists, and use a hierarchy of headings. Markdown can also handle hyperlinks and images. But overall, it is designed to be used without much knowledge of how to visually customize a document. This makes it very accessible, especially to people without any experience programming or even using markup languages.</p>
 <p>The benefit of Markdown is in its simplicity - besides being incredibly easy to pick up, its established structure makes it easy to convert into many filetypes. Since it possesses a very limited set of features, it can be mapped into other formats without much concern for complicated edge cases.</p>
 <h3 id="pandoc">Pandoc</h3>
 <div class="figure">
-<img src="images/pandoc-logo.png" />
+<img src="../images/pandoc-logo.png" />
 
 </div>
 <p>Pandoc is a software that converts a large set of different markup formats to each other. To do this, Pandoc reads an original file into a native representation and then writes it into the specified format for the output file. When there are differences in functionality between the original file and the output file, or even the original file and the native representation, characteristics from the original file can be lost. An advantage of using markdown is that it restricts the user to functionality which is ubiquitous in most other formats, so there is rarely a problem with converting markdown to another file format.</p>
